force-app/main/default/objects/External_Reservation__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <label>Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>