force-app/main/default/objects/External_Reservation__c/fields/External_Guest__c.field-meta.xml
<CustomField>
    <fullName>External_Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Guest</label>
    <referenceTo>External_Guest__c</referenceTo>
    <relationshipLabel>External Reservations</relationshipLabel>
    <relationshipName>External_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>