force-app/main/default/objects/External_Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_in_Date__c</columns>
    <columns>Check_out_Date__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Reservation_Status__c</columns>
    <columns>Contact_ID__c</columns>
    <columns>External_Guest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>